fixed dark theme text that was unreadable and rounded the mesages background.

--- a/src/components/MainContent/Chatroom/Message/Message.module.scss
+++ b/src/components/MainContent/Chatroom/Message/Message.module.scss
@@ -1,16 +1,10 @@
-.message {
+.messageContainer {
     display: block;
-    color: var(--dark-action);
     max-width: 100vw;
     text-align: left;
     padding: 1.5rem 1rem;
     margin: .25rem 0 .25rem 0;
     border-bottom: 1px dotted var(--light-action);
-}
-p { 
-    max-width: 75vw;
-    word-wrap: break-word;
-    margin: 0;
 }
 .userName {
     margin: 0;
@@ -18,10 +12,20 @@ p {
     padding: 0 0 .25rem 0;
     text-transform: capitalize;
 }
-.senderName {  
-       background-color: var(--dark-action);
-       color: var(--light-accent-bg);
+.message { 
+    display: inline-block;
+    padding: .5rem 1rem;
+    line-height: 2rem;
+    border-radius: 30px;
+    max-width: 80vw;
+    word-wrap: break-word;
+    margin: 0;
 }
-.recieverName {
+.senderMessage {  
     background-color: var(--light-accent-bg);
+    color: var(--main-text);
+}
+.recieverMessage {
+    background-color: var(--dark-action);
+    color: var(--light-accent-bg);
 }
